--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,5 @@ rootProject.name = 'herminedb'
 include 'hermine-jmh'
 //include 'hermine-playground'
 
-include 'herminedb-core'
+include 'herminedb-engine'
 include 'herminedb-driver'
