--- a/hermine-jmh/build.gradle
+++ b/hermine-jmh/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    compile project(':herminedb-core')
+    compile project(':herminedb-engine')
     compile project(':herminedb-driver')
 
     compile('org.openjdk.jmh:jmh-generator-annprocess:1.21')
