start implementing ADBA driver for Hermine DB

--- a/hermine-jmh/build.gradle
+++ b/hermine-jmh/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 dependencies {
     compile project(':herminedb-engine')
-    compile project(':herminedb-driver')
+//    compile project(':herminedb-driver')
 
     compile('org.openjdk.jmh:jmh-generator-annprocess:1.21')
 }
