--- a/hermine-io/build.gradle
+++ b/hermine-io/build.gradle
@@ -1,1 +1,7 @@
+/*
+ * Copyright 2018 HermineDB's author : Frédéric Montariol
+ * and explicitly declared author of each file if specified.
+ * Use of this source code is governed by the Apache 2.0 license.
+ */
+
 ext.moduleName='org.hermine.io'
