--- a/herminedb-driver/build.gradle
+++ b/herminedb-driver/build.gradle
@@ -1,25 +1,17 @@
-//plugins {
-//    id "io.spring.dependency-management" version "1.0.1.RELEASE"
-//}
+/*
+ * Copyright 2018 HermineDB's author : Frédéric Montariol
+ * and explicitly declared author of each file if specified.
+ * Use of this source code is governed by the Apache 2.0 license.
+ */
 
 ext.moduleName='org.herminedb.driver'
 
 repositories {
-//    mavenLocal()
     maven { setUrl("https://dl.bintray.com/pull-vert/adba") }
-    maven { setUrl("http://repo.spring.io/milestone") }
 }
-
-// todo Not released yet
-//dependencyManagement {
-//    imports {
-//        mavenBom "io.projectreactor:reactor-bom:CALIFORNIUM-M1"
-//    }
-//}
 
 dependencies {
     compile('jdk.incubator:adba:0.05')
-    compile('io.projectreactor:reactor-core:3.2.0.M2')
-    compile('io.projectreactor.addons:reactor-extra:3.2.0.M1')
-    testCompile('io.projectreactor:reactor-test:3.2.0.M2')
+    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version")
+    compile("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:$kotlinx_coroutines_version")
 }
