--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,15 @@ subprojects {
 
     dependencies {
         compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+    }
+}
+
+def useKotlinxCoroutinesAndSlf4jAndJunit5 = ['hermine-io', 'herminedb-driver']
+
+configure(subprojects.findAll { useKotlinxCoroutinesAndSlf4jAndJunit5.contains(it.name) }) {
+
+    dependencies {
+        compile("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:$kotlinx_coroutines_version")
         compile("org.apache.logging.log4j:log4j-api:$log4j_version")
         compile("org.apache.logging.log4j:log4j-core:$log4j_version")
         compile("org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version")
