add dependency on kotlinx-coroutines-io

--- a/hermine-io/build.gradle
+++ b/hermine-io/build.gradle
@@ -5,3 +5,7 @@
  */
 
 ext.moduleName='org.hermine.io'
+
+dependencies {
+    compile("org.jetbrains.kotlinx:kotlinx-coroutines-io:$kotlinx_coroutines_version")
+}
