simplified one line Copyright

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 /*
- * Copyright 2018 HermineDB's author : Frédéric Montariol
- * and explicitly declared author of each file if specified.
- * Use of this source code is governed by the Apache 2.0 license.
+ * Copyright 2018 HermineDB's author : Frédéric Montariol. Use of this source code is governed by the Apache 2.0 license.
  */
 
 import org.jetbrains.kotlin.config.KotlinCompilerVersion
@@ -203,9 +201,7 @@ configure(subprojects.findAll { !noModule.contains(it.name) }) {
     }
 }
 
-/**
- * use ./gradlew wrapper when version change
- */
+// use ./gradlew wrapper when version change
 wrapper {
     gradleVersion = '4.9'
     distributionType = Wrapper.DistributionType.ALL
