--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,11 @@
-#
-# Copyright 2018 HermineDB's author : Frédéric Montariol. Use of this source code is governed by the Apache 2.0 license.
-#
-
 version = 0.0.1
 group = org.hermine
 
-kotlin_version = 1.2.51
-kotlinx_coroutines_version = 0.24.0
+kotlin_version = 1.2.61
+kotlinx_coroutines_version = 0.25.0
+kotlinx_io_version = 0.1.0-alpha-4
 dokka_version = 0.9.16
-atomicFU_version = 0.11.0
+atomicFU_version = 0.11.1
 
 kotlin_logging_version=1.5.4
 log4j_version = 2.11.0
