--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
-version = 0.0.1
-group = org.hermine
+version=0.0.1
+group=org.hermine
 
-kotlin_version = 1.2.61
-kotlinx_coroutines_version = 0.25.3
-kotlinx_io_version = 0.1.0-alpha-4
-dokka_version = 0.9.16
-atomicFU_version = 0.11.6
+kotlin_version=1.2.61
+kotlinx_coroutines_version=0.26.0
+kotlinx_io_version=0.1.0-alpha-4
+dokka_version=0.9.16
+atomicFU_version=0.11.6
 
 kotlin_logging_version=1.5.4
-log4j_version = 2.11.0
+log4j_version=2.11.0
 
-adba_version = 0.06
+adba_version=0.06
 
-assertj_version = 3.10.0
-junit_version = 5.0.0
+assertj_version=3.10.0
+junit_version=5.0.0
 
 org.gradle.parallel=true
