--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 version=0.0.1
 group=org.hermine
 
+gradle_version=4.10
+
 kotlin_version=1.2.61
 kotlinx_coroutines_version=0.26.0
 kotlinx_io_version=0.1.0-alpha-4
