--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 version=0.0.1
 group=org.hermine
 
-gradle_version=4.10.1
+gradle_version=4.10.2
 
-kotlin_version=1.2.61
-kotlinx_coroutines_version=0.26.1
-kotlinx_io_version=0.1.0-alpha-4
+kotlin_version=1.3.10
+kotlinx_coroutines_version=1.0.1
+kotlinx_io_version=0.1.0
 dokka_version=0.9.16
-atomicFU_version=0.11.7
+atomicFU_version=0.11.12
 
-kotlin_logging_version=1.5.4
-log4j_version=2.11.0
+kotlin_logging_version=1.6.20
+log4j_version=2.11.1
 
-adba_version=0.06
+adba_version=0.07
 
 assertj_version=3.11.1
 junit_version=5.0.0
